--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
-    
+    <title>Website</title>
   </head>
   <body>
     <h1>
-      This is my website
+      This is my website Hello
     </h1>
   </body>
 </html>
