--- a/index.html
+++ b/index.html
@@ -1,10 +1,17 @@
 <html>
   <head>
-    <title>Website</title>
+    <title>Happy Pillows</title>
   </head>
   <body>
+    <style>
+      body {
+        font-family: Arial;
+        font-size: 60px
+      }
+    </style>
     <h1>
       This is my website Hello
     </h1>
+    
   </body>
 </html>
