--- a/index.html
+++ b/index.html
@@ -5,13 +5,17 @@
   <body>
     <style>
       body {
+        text-align: center
+      }
+      #headers {
         font-family: Arial;
-        font-size: 60px
+        font-size: 60px;
+        text-align: center
       }
     </style>
-    <h1>
-      This is my website Hello
+    <h1 class="headers">
+      Happy Pillows
     </h1>
-    
+    This site is still a work in progress
   </body>
 </html>
