--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <html>
   <head>
     <title>Happy Pillows</title>
+    <meta charset="utf-8">
   </head>
   <body>
     <style>
       body {
-        text-align: center
+        text-align: center;
+        font-family: Arial
       }
       #headers {
         font-family: Arial;
