--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
   <head>
     <title>Happy Pillows</title>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css"/>
+    <script src="main.js"></script>
   </head>
   <body>
     <style>
