--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       }
     </style>
     <h1 class="headers">
-      Happy Pillows
+      Oakland Tech's Live Laugh Adulting
     </h1>
     This site is still a work in progress
   </body>
