--- a/index.html
+++ b/index.html
@@ -21,5 +21,7 @@
       Oakland Tech's Live Laugh Adulting
     </h1>
     This site is still a work in progress
+    <br>
+    <a href="daw.html">Enter the studio</a>
   </body>
 </html>
