--- a/daw.html
+++ b/daw.html
@@ -13,5 +13,6 @@
     <button class="instruments" id="piano">Piano</button>
     <button class="instruments" id="drums">Drums</button>
     <button class="instruments" id="guitar">Guitar</button>
+    <canvas id="editor" width="300px" height="300px"></canvas>
   </body>
 </html>
