--- a/daw.html
+++ b/daw.html
@@ -15,4 +15,5 @@
     <button class="instruments" id="guitar">Guitar</button>
     <canvas id="editor" width="300px" height="300px"></canvas>
   </body>
+  <script src="main.js"></script>
 </html>
