--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1 class="headers">
-      Oakland Tech's Live Laugh Adulting
+      Oakland Tech's Live Adulting
     </h1>
     This site is still a work in progress
     <br>
