--- a/index.html
+++ b/index.html
@@ -5,6 +5,12 @@
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
+    <div id="topbar">
+      <button>Home</button>
+      <button>Page 1</button>
+      <button>Page 2</button>
+      <button>Page 3</button>
+    </div>
     <h1 class="headers">
       Oakland Tech's Live Adulting
     </h1>
