--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <div id="topbar">
       <button>Home</button>
-      <button>Page 1</button>
-      <button>Page 2</button>
-      <button>Page 3</button>
+      <button id="game1">Game 1</button>
+      <button id="game2>Game 2</button>
+      <button id="game3">Game 3</button>
     </div>
     <h1 class="headers">
       Oakland Tech's Live Adulting
