--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
   <body>
     <div id="topbar">
       <button>Home</button>
-      <button id="game1">Game 1</button>
-      <button id="game2>Game 2</button>
-      <button id="game3">Game 3</button>
+      <a>Game 1</a>
+      <a>Game 2</a>
+      <a>Game 3</a>
     </div>
     <h1 class="headers">
       Oakland Tech's Live Adulting
