--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
   </head>
   <body>
     <div id="topbar">
-      <button>Home</button>
-      <a>Game 1</a>
+      <a href="index.html">Home</a>
+      <a href="game1.html">Game 1</a>
       <a>Game 2</a>
       <a>Game 3</a>
     </div>
