--- a/game1.html
+++ b/game1.html
@@ -2,6 +2,7 @@
   <head>
     <meta charset="utf-8">
     <title>Game 1</title>
+    <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     This is GAME_1
