--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div id="topbar">
-      <a href="index.html">Home</a>
+      <a>Home</a>
       <a href="game1.html">Game 1</a>
       <a>Game 2</a>
       <a>Game 3</a>
