--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <div id="topbar">
       <a>Home</a>
       <a href="game1.html">Game 1</a>
-      <a>Game 2</a>
-      <a>Game 3</a>
+      <a href="game2.html">Game 2</a>
+      <a href="game3.html">Game 3</a>
     </div>
     <h1 class="headers">
       Oakland Tech's Live Adulting
