--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>Happy Pillows</title>
+    <title>Live Adulting</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css"/>
   </head>
