--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
   <p>
     This site is still a work in progress
   </p>
+  <a href="musicpage.html">To another page</a>
     <br>
   </body>
   <script src="main.js"></script>
