update I dont know

--- a/musicpage.html
+++ b/musicpage.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Test Website</title>
-    <link rel="stylesheet" src="musicpagestyle.css">
+    <link rel="stylesheet" href="musicpagestyle.css">
 </head>
 <body>
     <div id="daw">
