--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     This site is still a work in progress
   </p>
   <a href="musicpage.html">To another page</a>
+    <a href="3dpage.html">To another another page</a>
     <br>
   </body>
   <script src="main.js"></script>
