updating AGAIN and AGAIN

--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
   </p>
   <a href="musicpage.html">To another page</a>
     <a href="3dpage.html">To another another page</a>
-    <br>
+    <br> <br> <br>
+    <h1> Posts </h1>
   </body>
   <script src="main.js"></script>
 </html>
