--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ Background Color <br>
 </div>
 <div class="posts" id="post">
 <button id="deleteButton"> Delete Post </button>
-<h3> Author: Name @unknown <h3>
+<br> <label> Author: Name @unknown </label> <br>
 <br>
 <h1> Post Title </h1>
 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcQLsKCgd8yOVE6GnPZZSYLqrrBTIsW8diIpqU2uRv_4lw&s"></img>
