--- a/drawingpage.html
+++ b/drawingpage.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <title>Test Website</title>
+<link rel="stylesheet" href="drawingpage.css">
 </head>
 <body>
 <canvas id="drawing-board"></canvas>
