--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   </p>
   <a href="musicpage.html">To another page</a>
     <a href="3dpage.html">To another another page</a>
+    <a href="drawingpage.html">To another another page</a>
     <br> <br> <br>
     <h1> Posts </h1>
     <div id="fullscreen" hidden>
