--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@ Description <br>
 <input id="descriptionField" type="text"> <br>
 Author Alias (optional) <br>
 <input id="authorAliasField" type="text"> <br>
-Image <br>
-<input id="imageField" type="file"> <br>
+Media <br>
+<input id="mediaField" type="file"> <br>
 Background Color <br>
 <input id="colorField" type="color"> <br>
 <button id="createPostButton"> Create </button>
