--- a/musicpage.html
+++ b/musicpage.html
@@ -2,6 +2,7 @@
 <head>
 <title> Demo </title>
 <meta charset="utf-8">
+<link rel="stylesheet" href="musicpagestyle.css">
 </head>
 <body>
 <h1> Studio </h1>
@@ -41,4 +42,5 @@ Set Tempo: <input id="tempochanger" type="range"></input>
 <br> <br> <br>
 </div>
 </body>
+<script src="musicpage.js">
 </html>
