--- a/musicpage.html
+++ b/musicpage.html
@@ -42,5 +42,5 @@ Set Tempo: <input id="tempochanger" type="range"></input>
 <br> <br> <br>
 </div>
 </body>
-<script src="musicpage.js">
+<script src="musicpage.js"></script>
 </html>
