--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="fullscreen" hidden>
 <button id="exitFullscreen">Exit Fullscreen</button> <br>
 </div>
-<p> Markup Guide <br> For bold text try <br> <b>&lt;b&gt;text&lt;/</b>b&gt; <br> For italicized text try <br> <b>&lt;i&gt;text&lt;/i&gt;</b> <br> For a header you can try <br> <b>&lt;h1&gt;text&lt;/h1&gt;</b><br> For a line break try <br> <b>&lt;br&gt;text&lt;/br&gt;</b> </p>
+<p> Markup Guide <br> For bold text try <br> <b>&lt;b&gt;text&lt;/</b>b&gt; <br> For italicized text try <br> <b>&lt;i&gt;text&lt;/i&gt;</b> <br> For a header you can try <br> <b>&lt;h1&gt;text&lt;/h1&gt;</b><br> For a line break try <br> <b>&lt;br&gt;</b> </p>
 <button id="postCreatorDirector">
 Enter Post Creator </button>
 <div id="postCreator">
