--- a/index.html
+++ b/index.html
@@ -1,12 +1,12 @@
 <html>
   <head>
-    <title>Live Adulting</title>
+    <title>Next Level</title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="style.css"/>
   </head>
   <body>
     <h1>
-      Oakland Tech's Live Adulting
+      Next Level
     </h1>
   <p>
     This site is still a work in progress
