colors for the drawers

--- a/drawingpage.html
+++ b/drawingpage.html
@@ -7,10 +7,14 @@
 <body>
 <canvas id="drawing-board"></canvas>
 <div id="settings">
-    Line Size <br>
+    <label> Line Size </label>
+    <br>
     <button id="increment">Increment</button>
     <label id="display">10</label>
     <button id="decrement">Decrement</button>
+    <br>
+    <label> Line Color </label>
+    <input id="color" type="color">
     <br>
     <button id="clear">Clear</button>
 </div>
